# prost-textio

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
src/: finder.rs  lib.rs  parser.rs  printer.rs  serde.rs  test_util.rs  tokenizer.rs
tests/proto/google/protobuf/: unittest.proto
