[package]
name = "prost-textio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
prost = "0.9.0"
prost-reflect = { version = "0.6.0", features = ["reflect-well-known-types"] }
prost-types = "0.9.0"

[build-dependencies]
prost-build = "0.9.0"

[dev-dependencies]
paste = "1.0.6"
approx = "0.5.1"
rstest = "0.12.0"
