[package]
name = "prost-textio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
once_cell = "1.9.0"
prost = "0.9.0"
prost-reflect = { version = "0.6.1", features = ["reflect-well-known-types", "derive"] }
prost-types = "0.9.0"

[build-dependencies]
prost-reflect-build = "0.6.0"

[dev-dependencies]
paste = "1.0.6"
approx = "0.5.1"
rstest = "0.12.0"
bytes = "1.1.0"
